[gd_scene load_steps=12 format=3 uid="uid://bg6uiu1evlahf"]

[ext_resource type="Script" path="res://Scene/Swamp_Level_1/Mobs/Catfish/catfish.gd" id="1_7606g"]
[ext_resource type="Texture2D" uid="uid://prfd4euw56g5" path="res://Sprites/SwampLevel1/Mobs/Catfish/Catfish_idle.png" id="1_dj4lu"]
[ext_resource type="Texture2D" uid="uid://dx85dv78wevyp" path="res://Sprites/SwampLevel1/Mobs/Catfish/Catfish_bite_1.png" id="2_acvv2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l0evl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_acvv2")
}],
"loop": false,
"name": &"bite",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dj4lu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqk1o"]
radius = 30.0666

[sub_resource type="Animation" id="Animation_uu8as"]
resource_name = "spawn_side_R"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Catfish_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120, 110), Vector2(120, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Catfish_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-26, 82), Vector2(-26, 12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_85x6u"]
resource_name = "spawn_side_L"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Catfish_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120, 110), Vector2(120, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-26, 82), Vector2(-26, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Catfish_sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_be4y8"]
resource_name = "jump_R"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Catfish_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(120, 40), Vector2(120, 75), Vector2(-130, -60), Vector2(-340, 170), Vector2(-340, 210)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Catfish_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.174533, 0.174533, 0.523599, 0.0, -0.698132]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-26, 12), Vector2(-26, 47), Vector2(-135, -57), Vector2(-283, -41), Vector2(-438, 245)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Catfish_sprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"idle", &"bite", &"idle"]
}

[sub_resource type="Animation" id="Animation_finnv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, -11)]
}

[sub_resource type="Animation" id="Animation_g67ft"]
resource_name = "jump_L"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Catfish_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(120, 40), Vector2(120, 75), Vector2(-130, -60), Vector2(-340, 170), Vector2(-340, 210)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Catfish_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.174533, 0.174533, 0.523599, 0.0, -0.698132]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Catfish_sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"idle", &"bite", &"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-26, 12), Vector2(-26, 47), Vector2(-135, -57), Vector2(-283, -41), Vector2(-438, 245)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjxd7"]
_data = {
"RESET": SubResource("Animation_finnv"),
"jump_L": SubResource("Animation_g67ft"),
"jump_R": SubResource("Animation_be4y8"),
"spawn_side_L": SubResource("Animation_85x6u"),
"spawn_side_R": SubResource("Animation_uu8as")
}

[node name="Catfish" type="Area2D" groups=["Catfish"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_7606g")

[node name="Catfish_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(120, 110)
rotation = 0.174533
scale = Vector2(-0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_l0evl")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, -11)
shape = SubResource("CircleShape2D_jqk1o")
debug_color = Color(0.94902, 0.188235, 0.34902, 0.419608)

[node name="Animation_Catfish" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_wjxd7")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation_Catfish" to="." method="_on_animation_catfish_animation_finished"]
